src/main/java/io/github/jhipster/sample/web/rest/errors/LoginAlreadyUsedException.java
package io.github.jhipster.sample.web.rest.errors;

public class LoginAlreadyUsedException extends BadRequestAlertException {

    public LoginAlreadyUsedException() {
        super("Login name already used!", "userManagement", "userexists");
    }
}
